--- a/MY Contact.html
+++ b/MY Contact.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My  Contact</title>
+    <link rel="stylesheet" href="CSS/Style.css">
 </head>
 <body>
     <h1>My Contact Details</h1>
-    <p>Address:</p>
-    <p>Phone number:</p>
-    <p>Gmail address:</p>
+    <p>Phone number:09029180292</p>
+    <p>Gmail address:oluwadarasimi09029@gmail.com</p>
     <hr>
     <form action="mailto:oluwadarasimi09029@gmail.com" enctype="text/plain">
         <label>Your Name</label>
